darker yellow for characters' color
touches #2

--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ button {
 
 button#noun       { background: #1c74c1;}
 button#location   { background: #14a020;}
-button#character  { background: #d6a414;}
+button#character  { background: #ce9900;}
 button#relation   { background: #d40b0b;}
 button#emotion    { background: #bb2392;}
 button#dictionary { background: #808080;}
