--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ button {
     align-items: center;
     font: inherit;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
-    color: #e5e5e5;
+    color: white;
     border: 0;
     border-bottom: 2px solid rgba(0, 0, 0, 0.25);
     border-top: 2px solid rgba(255, 255, 255, 0.25);
