--- a/css/style.css
+++ b/css/style.css
@@ -19,9 +19,10 @@ svg {
 #buttons {
     margin-top: 1em;
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(3, 150px) 100px;
+    grid-template-columns: [buttons-start] repeat(6, 1fr) [buttons-end];
+    grid-template-rows: [buttons-start] repeat(3, 150px) [buttons-end] 100px;
     grid-gap: 20px 20px;
+    position: relative;
 }
 
 button {
@@ -53,7 +54,7 @@ button.nav {
     background: buttonface;
 }
 
-button.nav span {
+button.nav#undo span {
     position: relative;
     top: -6px;
 }
@@ -72,4 +73,24 @@ button#dictionary { background: #777777;}
 
 button[disabled]   {
     opacity: 0.3;
+}
+
+#popup {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    grid-area: buttons;
+    background: rgba(255, 255, 255, 0.95);
+    border-radius: 10pt;
+    box-shadow: 0 0 0 2pt white;
+}
+
+#popup div {
+    padding: 0.5em;
+}
+
+#popup p {
+    text-align: center;
+    margin: 0;
 }
