--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,9 @@ main {
 div[id^=section] {
     margin: 1.5em 0;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 4em auto;
     grid-template-rows: 1.5em 2em;
-    grid-gap: 10px 20px;
+    grid-gap: 0.25em 0.5em;
     position: relative;
 }
 
@@ -34,13 +34,13 @@ button {
     justify-content: center;
     align-items: center;
     font: inherit;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.5);
+    text-shadow: 0 -0.025em 0 rgba(0, 0, 0, 0.5);
     color: white;
     background: none;
     border: 0;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.25);
-    border-top: 2px solid rgba(255, 255, 255, 0.25);
-    border-radius: 5pt;
+    border-bottom: 0.05em solid rgba(0, 0, 0, 0.25);
+    border-top: 0.05em solid rgba(255, 255, 255, 0.25);
+    border-radius: 0.15em;
     font-size: 1.2em;
     cursor: pointer;
     outline: none;
@@ -58,7 +58,7 @@ button[id^=button-next-] {
 
 button span {
     position: relative;
-    line-height: 0em;
+    line-height: 0;
     pointer-events: none;
 }
 
