--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 body {
     margin: 0;
-    font: 20pt Montserrat;
+    font: 18pt Montserrat;
     color: #333;
     background: #e5e5e5;
 }
@@ -19,9 +19,9 @@ main {
 div[id^=section] {
     margin: 1.5em 0 1.5em 1em;
     display: grid;
-    grid-template-columns: 4em auto;
-    grid-template-rows: 1.5em 2em;
-    grid-gap: 0.25em 0.5em;
+    grid-template-columns: 5em auto;
+    grid-template-rows: 1.7em 2.2em;
+    grid-gap: 0.25em 0.7em;
     position: relative;
     max-width: 100vw;
 }
@@ -34,17 +34,14 @@ button {
     justify-content: center;
     align-items: center;
     font: inherit;
-    text-shadow: 0 -0.025em 0 rgba(0, 0, 0, 0.5);
     color: white;
     background: none;
     border: 0;
-    border-bottom: 0.05em solid rgba(0, 0, 0, 0.25);
-    border-top: 0.05em solid rgba(255, 255, 255, 0.25);
+    border-bottom: 0.07em solid rgba(0, 0, 0, 0.25);
+    border-top: 0.07em solid rgba(255, 255, 255, 0.25);
     border-radius: 0.15em;
-    font-size: 1.2em;
     cursor: pointer;
     outline: none;
-    transition: opacity 0.1s linear;
     opacity: 1;
 }
 
@@ -54,43 +51,64 @@ button[id^=button-prev-] {
 
 button[id^=button-next-] {
     order: 3;
+    animation-duration: 1s;
+    animation-iteration-count: 1;
+    animation-play-state: running;
 }
 
 button span {
     position: relative;
-    line-height: 0;
+    line-height: 1em;
     pointer-events: none;
+    font-variant: small-caps;
 }
 
 button[id^=button-prev-] span {
-    top: -0.05em;
+    top: -0.07em;
+}
+
+button[id^=button-prev-] span:before {
+    content: "\ab";
     font-size: 1.3em;
-    color: #676767;
+    margin-right: 0.2em;
+    position: relative;
+    top: 0.085em;
 }
 
 button[id^=button-next-] span {
-    top: -0.09em;
-    font-size: 1.8em;
+    font-size: 1.1em;
+    top: -0.15em;
+}
+
+button[id^=button-next-] span:after {
+    content: "\bb";
+    font-size: 1.3em;
+    margin-left: 0.2em;
+    position: relative;
+    top: 0.085em;
 }
 
 button[disabled] {
     opacity: 0.3;
+    pointer-events: none;
+    animation-play-state: paused;
 }
 
 button[id^=button-prev-][disabled] {
     opacity: 0;
-    pointer-events: none;
 }
 
 div.section-header {
     order: 2;
     font-variant: small-caps;
+    position: relative;
+    top: 0.2em;
 }
 
 div[id^=word-] {
     order: 4;
     font-size: 1.8em;
-    line-height: 1.1em;
+    line-height: 1.2em;
     white-space: nowrap;
     max-width: 0;
 }
