--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,19 @@
     --hover-duration: 180ms;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 body {
     margin: 0;
     font: 18pt Montserrat;
     color: #333;
     background: #f5f5f5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 body.show-outline button:focus {
@@ -20,13 +28,19 @@ body.show-outline button:focus {
 
 main {
     margin: 1em auto;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 1.5em;
+    width: 100vw;
 }
 
 div[id^=section] {
-    margin: 1.5em 0 1.5em 1em;
+    margin-left: 1em;
     display: grid;
     grid-template-columns: 5em auto;
-    grid-template-rows: 1.7em 2.2em;
+    grid-template-rows: 1.7em 2.3em;
+    grid-template-areas: "button-prev-word category-name"
+                         "button-next-word word";
     grid-gap: 0.25em 1.1em;
     position: relative;
     max-width: 100vw;
@@ -59,11 +73,11 @@ button:focus {
 }
 
 button[id^=button-prev-] {
-    order: 1;
+    grid-area: button-prev-word;
 }
 
 button[id^=button-next-] {
-    order: 3;
+    grid-area: button-next-word;
     animation-duration: 1s;
     animation-iteration-count: 1;
     animation-play-state: running;
@@ -122,16 +136,48 @@ button[id^=button-prev-][disabled] {
 }
 
 div.section-header {
-    order: 2;
+    grid-area: category-name;
     font-variant: small-caps;
     position: relative;
     top: 0.2em;
+    letter-spacing: 0.03em;
 }
 
 div[id^=word-] {
-    order: 4;
+    grid-area: word;
     font-size: 1.8em;
     line-height: 1.2em;
     white-space: nowrap;
     max-width: 0;
+}
+
+footer {
+    margin: 1em auto;
+    width: 100vw;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+footer > :first-child {
+    margin-left: 1em;
+}
+
+footer > :last-child {
+    margin-right: 1em;
+}
+
+#button-next-all {
+    width: 12em;
+    height: 2.3em;
+}
+
+#author {
+    margin-left: 1em;
+}
+
+#author a {
+    color: #333;
+    text-decoration: none;
 }
