--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   --button-shadow: 0 0.2rem 0.4rem rgba(0, 0, 0, 0.11);
   --button-shadow-deep: 0 0.3rem 0.7rem rgba(0, 0, 0, 0.2);
   --hover-duration: 180ms;
+
+  --swiper-navigation-color: black;
+  --swiper-navigation-padding: 2rem;
 }
 
 *, *::before, *::after {
@@ -42,7 +45,7 @@ main {
   width: 100vw;
 }
 
-div[id^='section-'] {
+.word-section {
   position: relative;
   width: 100%;
   height: 4rem;
@@ -59,6 +62,11 @@ div[id^='section-'] {
   justify-content: center;
   text-align: center;
   padding: 0 3rem;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  padding: 0 var(--swiper-navigation-padding);
 }
 
 button {
