--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,17 @@
     rgba(255, 255, 255, 1) 100%
   );
 
+  --body-padding: 1rem;
   --card-padding: 0.5rem;
   --card-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
                  0px 1px 1px 0px rgba(0, 0, 0, 0.14),
                  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  --fab-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
+                0 6px 10px 0 rgba(0, 0, 0, 0.14),
+                0 1px 18px 0 rgba(0, 0, 0, 0.12);
+  --fab-shadow-active: 0 7px 8px -4px rgba(0, 0, 0, 0.2),
+                       0 12px 17px 2px rgba(0, 0, 0, 0.14),
+                       0 5px 22px 4px rgba(0, 0, 0, 0.12);
   --card-background-color: white;
   --card-icon-color: var(--color-accent);
   --swiper-navigation-color: var(--color-accent);
@@ -62,7 +69,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1rem;
+  padding: var(--body-padding);
+  position: relative;
 }
 
 body.compact {
@@ -86,8 +94,15 @@ main {
 
 button,
 a {
+  font-family: inherit;
   border: none;
   outline: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 /* #endregion Initial definitions */
@@ -106,6 +121,10 @@ a {
   display: grid;
   grid-template-columns: auto 1fr auto;
   grid-template-areas: 'nav-prev swiper-container nav-next';
+}
+
+.word-section:last-child {
+  margin-bottom: 5.5rem;
 }
 
 /* Contains the wrapper created by Swiper */
@@ -179,11 +198,10 @@ a {
 }
 
 [class^='navigation-button-'] {
-  text-transform: uppercase;
   color: var(--swiper-navigation-color);
   font-weight: 500;
   padding: 0.5rem;
-  border-radius: 0.2rem;
+  border-radius: 10rem;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -221,5 +239,53 @@ a {
 /* #endregion Single section with a word swiper */
 
 /* #region Footer */
+
+footer {
+  position: fixed;
+  left: var(--body-padding);
+  right: var(--body-padding);
+  bottom: var(--body-padding);
+  z-index: 2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#footer-inner-container {
+  width: min(100%, 40rem);
+  position: relative;
+}
+
+#advance-all {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+  border-radius: 10rem;
+  box-shadow: var(--fab-shadow);
+  font-size: 1rem;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: var(--color-accent);
+  color: white;
+  transform: translate3d(0, 0, 0);
+  transition-property: box-shadow;
+  transition-duration: 400ms;
+}
+
+#advance-all:active {
+  box-shadow: var(--fab-shadow-active);
+}
+
+#advance-all span {
+  font-weight: 500;
+  margin-right: 0.5rem;
+  display: none;
+}
 
 /* #endregion Footer */
